<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddCarActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/add_car"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20sp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/brand"
            android:textSize="15sp"
            android:textAlignment="center"
            android:inputType="text"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:hint="@string/brand"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/model"
            android:textSize="15sp"
            android:textAlignment="center"
            android:inputType="text"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:hint="@string/model"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cylinder"
            android:textSize="15sp"
            android:textAlignment="center"
            android:inputType="text"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:hint="@string/cylinder"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mileage"
            android:textSize="15sp"
            android:textAlignment="center"
            android:inputType="text"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:hint="@string/mileage"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/color"
            android:textSize="15sp"
            android:textAlignment="center"
            android:inputType="text"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:hint="@string/color"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/doorNumber"
            android:textSize="15sp"
            android:textAlignment="center"
            android:inputType="number"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:hint="@string/door_number"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fuel"
            android:textSize="15sp"
            android:textAlignment="center"
            android:inputType="text"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:hint="@string/fuel"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gearBox"
            android:textSize="15sp"
            android:textAlignment="center"
            android:inputType="text"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:hint="@string/gear_box"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/state"
            android:textSize="15sp"
            android:textAlignment="center"
            android:inputType="text"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:hint="@string/state"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/type"
            android:textSize="15sp"
            android:textAlignment="center"
            android:inputType="text"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:hint="@string/type"/>

        <ImageView
            android:id="@+id/image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_launcher_foreground"/>

        <Button
            android:id="@+id/validate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/validate"
            android:layout_marginBottom="50dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>