<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    tools:context=".activity.ShowCarActivity"
    android:id="@+id/container">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_margin="20dp"
                android:layout_gravity="center"
                android:background="@color/colorPrimary"
                android:id="@+id/picture"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_height="match_parent">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="30dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="22sp"
                        android:layout_margin="5dp"
                        android:layout_gravity="start"
                        android:id="@+id/brand"
                        android:text="@string/brand"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="22sp"
                        android:layout_margin="5dp"
                        android:layout_gravity="start"
                        android:id="@+id/model"
                        android:text="@string/model"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="22sp"
                        android:layout_margin="5dp"
                        android:layout_gravity="start"
                        android:id="@+id/type"
                        android:text="@string/type"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="22sp"
                        android:layout_margin="5dp"
                        android:layout_gravity="start"
                        android:id="@+id/availability"
                        android:text="@string/availability"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="22sp"
                        android:layout_margin="5dp"
                        android:layout_gravity="start"
                        android:id="@+id/state"
                        android:text="@string/state"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="22sp"
                        android:layout_margin="5dp"
                        android:layout_gravity="start"
                        android:id="@+id/gearBox"
                        android:text="@string/gear_box"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="30dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="22sp"
                        android:layout_margin="5dp"
                        android:layout_gravity="start"
                        android:id="@+id/cylinder"
                        android:text="@string/cylinder"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="22sp"
                        android:layout_margin="5dp"
                        android:layout_gravity="start"
                        android:id="@+id/mileage"
                        android:text="@string/mileage"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="22sp"
                        android:layout_margin="5dp"
                        android:layout_gravity="start"
                        android:id="@+id/color"
                        android:text="@string/color"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="22sp"
                        android:layout_margin="5dp"
                        android:layout_gravity="start"
                        android:id="@+id/doorNumber"
                        android:text="@string/door_number"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="22sp"
                        android:layout_margin="5dp"
                        android:layout_gravity="start"
                        android:id="@+id/fuel"
                        android:text="@string/fuel"/>
                </LinearLayout>
            </LinearLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/change_availability"
                android:id="@+id/changeAvailability"
                >

            </Button>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>