<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:id="@+id/container">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_margin="20dp"
                android:layout_gravity="center"
                android:background="@color/colorPrimary"
                android:id="@+id/picture"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_margin="20dp"
                android:layout_height="match_parent">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="30dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="22sp"
                        android:layout_margin="10dp"
                        android:layout_gravity="start"
                        android:id="@+id/brand"
                        android:text="@string/brand"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="22sp"
                        android:layout_margin="10dp"
                        android:layout_gravity="start"
                        android:id="@+id/model"
                        android:text="@string/model"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="22sp"
                        android:layout_margin="10dp"
                        android:layout_gravity="start"
                        android:id="@+id/type"
                        android:text="@string/type"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="22sp"
                        android:layout_margin="10dp"
                        android:layout_gravity="start"
                        android:id="@+id/availability"
                        android:text="@string/availability"/>
                </LinearLayout>


            </LinearLayout>



        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>